# lib/db/src/schema/index.ts
@@ -5,3 +5,5 @@ export * from "./tickets";
 export * from "./chat";
 export * from "./cms";
 export * from "./partners";
+export * from "./conversations";
+export * from "./messages";
